Table discussion as D{
  id bigint [pk, default:`nextval('discussion_seq'::regclass)`]
  discussion_id uuid [unique, default:`uuid_generate_v4()`]
  dao_id uuid 
  topic text
  description text 
  created_by uuid 
  updated_by uuid
  category text
  category_id uuid
  closed boolean [default:`false`]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp 
  closed_on timestamp 
  proposal_id text
  Indexes{
    id
    discussion_id
  }
}

Table participant{
  id bigint [pk, default:`nextval('participant_seq'::regclass)`]
  discussion_id uuid [ref: > D.discussion_id]
  member_id uuid
  created_at timestamp [not null, default: `now()`]

Indexes{
  id
  }
  
}


Table message {
  id bigint [pk, default:`nextval('message_seq'::regclass)`]
  discussion_id uuid [ref: > D.discussion_id]
  message_id uuid [unique, not null, default:`uuid_generate_v4()`]
  type text
  content text
  sender_id uuid [not null]
  attachment_link text
  metadata json [default:`{}`]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp

  Indexes{
    id
    message_id
  }
 }